--- a/ireland.html
+++ b/ireland.html
@@ -12,7 +12,7 @@
          th,td {
             border: 3px solid black;
             padding: 10px;
-            tex-align:right
+            text-align:right
          }
          th{
             background-color: bisque;
