--- a/ex2.html
+++ b/ex2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Muzica</title>
+    <title>Musica</title>
 </head>
 <body>
     <h1>Bun venit</h1>
@@ -17,7 +17,7 @@
 
     <hr>
 
-    <h2>Hit</h2>
+    <h2>Hit numarul1</h2>
     <div>
         <img src="https://i1.sndcdn.com/artworks-000076539230-bpj5jr-t240x240.jpg" alt="West Coast">
         <div>
