--- a/ex8.html
+++ b/ex8.html
@@ -47,7 +47,7 @@
 
     </style>
     <body>
-        <form action="#" method="post"  enctype="multipart/form-data" onsubmit="return validateForm()">
+        <form action="#" method="post">
                     <label for="sname">First Name:</label>
                     <input type="text" id="sname" placeholder="Enter your Name"></div>
                 
@@ -55,7 +55,7 @@
                     <input type="text" id="name" placeholder="Enter your Last Name"></div>
 
                     <div><label for="date">Birth Day:</label>
-                    <input type="date" id="date" placeholder="Enter your BithDay"></div>
+                    <input type="date" id="date" placeholder="Enter your BithDay" required></div>
                     
                    <div> <label for="mail">Email:</label>
                     <input type="email" id="male" placeholder="Enter your Email" required></div>
