--- a/ex8.html
+++ b/ex8.html
@@ -73,13 +73,13 @@
                     <legend>Choose your true</legend>
                     <div>
                         <h5>Type of films:</h5>
-                        <input type="checkbox" id="option1" name="option1" value="KDrama">
+                        <input type="checkbox" id="option1" name="option" value="KDrama">
                         <label for="option1">KDrama</label>
                         
-                        <input type="checkbox" id="option2" name="option2" value="Turkish">
+                        <input type="checkbox" id="option2" name="option" value="Turkish">
                         <label for="option2">Turkish</label>
 
-                        <input type="checkbox" id="option3" name="option3" value="American">
+                        <input type="checkbox" id="option3" name="option" value="American">
                         <label for="option3">American</label>
                     </div>
                     <div>
