--- a/exTask/ex11.html
+++ b/exTask/ex11.html
@@ -20,7 +20,7 @@ h1 {
 /*Stilizarea pseudo-element*/
 
 ol {
-    list-style-type: none;
+    list-style: none;
     counter-reset: kpop-counter;
     padding-left: 0;
 }
